<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_set_wakup_name"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_bg"
    android:orientation="vertical"
    tools:context="com.txznet.txzsetting.activity.SetWakupNameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="26"
            android:background="@color/background_00" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/actionbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y64"
                android:layout_marginBottom="@dimen/y16">

                <Button
                    android:id="@+id/actionbar_return_setting_wakeup"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:background="@color/background_00"
                    android:drawablePadding="@dimen/x13"
                    android:drawableStart="@drawable/selector_btn_return"
                    android:text="@string/actionbar_return"
                    android:textColor="@color/text_color_white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/actionbar_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@color/background_00"
                    android:text="@string/actionbar_text_wakeup_setting"
                    android:textColor="@color/text_color_white"
                    android:textSize="28sp" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout_wakup"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y80"
                android:background="@drawable/selector_listbtn4"
                android:gravity="center">

                <TextView
                    android:id="@+id/setting_wakup_checkbox"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/background_00"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/x20"
                    android:text="@string/setting_wakup"
                    android:textColor="@color/text_color_white"
                    android:textSize="20sp" />


                <com.txznet.txzsetting.view.CheckSwitchButton
                    android:id="@+id/setting_wakup_show_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/x20"
                    android:checked="true" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_wakup_command"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/y5"
                android:layout_height="@dimen/y80"
                android:visibility="gone"
                android:background="@drawable/selector_listbtn4"
                android:gravity="center">

                <TextView
                    android:id="@+id/setting_wakup_checkbox_command"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/background_00"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/x20"
                    android:text="@string/setting_wakup_command"
                    android:textColor="@color/text_color_white"
                    android:textSize="20sp" />


                <com.txznet.txzsetting.view.CheckSwitchButton
                    android:id="@+id/setting_wakup_show_checkbox_command"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/x20"
                    android:checked="true" />
            </LinearLayout>


            <TextView
                android:id="@+id/wakeup_now_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/y7"
                android:paddingTop="@dimen/y20"
                android:text="@string/show_now_wakeup_name"
                android:textSize="20sp" />

            <RelativeLayout
                android:id="@+id/setting_wakeup_addlist_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_listbtn1"
                android:gravity="start">

                <ImageView
                    android:id="@+id/setting_wakeup_addlist_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/y20" />

                <TextView
                    android:id="@+id/setting_wakeup_addlist_jiantou"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/x20"
                    android:background="@color/background_00"
                    android:drawableEnd="@drawable/jiantou"
                    android:gravity="center_vertical"
                    android:paddingEnd="@dimen/x20" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/setting_wakeup_addlist_image"
                    android:layout_toStartOf="@id/setting_wakeup_addlist_jiantou"
                    android:background="@color/background_00"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/x20"
                    android:paddingBottom="@dimen/y24"
                    android:paddingTop="@dimen/y24">

                    <EditText
                        android:id="@+id/setting_wakeup_addlist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/background_00"
                        android:hint="@string/setting_new_wakeup"
                        android:focusable="false"
                        android:inputType="textNoSuggestions"
                        android:textColor="@color/text_color_white"
                        android:textSize="@dimen/x15" />

                    <TextView
                        android:id="@+id/setting_wakeup_addlist_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show_wakeup_name_remind"
                        android:textColor="@color/color_text_item"
                        android:textSize="@dimen/x12" />
                </LinearLayout>
            </RelativeLayout>

            <ListView
                android:id="@+id/setting_wakeup_listview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:cacheColorHint="@color/background_00"
                android:listSelector="@color/background_00" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="26"
            android:background="@color/background_00" />
    </LinearLayout>
</LinearLayout>
